--- a/R-Project8-sentAnalysis.Rmd
+++ b/R-Project8-sentAnalysis.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "SentimentAnalysis"
-author: "Adam Walters"
+title: "Sentiment Analysis"
+author: "Henry Fong, Ian Zhang, Adam Walters"
 date: "`r Sys.Date()`"
 output: html_document
 ---
