--- a/R-Project8.Rmd
+++ b/R-Project8.Rmd
@@ -19,7 +19,7 @@ library(SnowballC)
 library(RColorBrewer)
 library(tidyverse)
 library(MASS)
-
+library(qdap)
 ```
 
 ```{r}
@@ -158,7 +158,6 @@ parcoord(tfidfTr[,1:10],col = cols)
 
 ```{r}
 
-
 # Function to remove unknown characters
 remove_unknown_characters <- function(text) {
   encoding <- "UTF-8"
@@ -210,35 +209,6 @@ print(p2$all$polarity)
 ```
 
 ```{r}
-# Create a matrix for pairwise comparisons
-polarity_matrix <- matrix(NA, nrow = nrow(df), ncol = nrow(df))
-
-# Fill the matrix with pairwise sentiment scores
-for (i in 1:nrow(df)) {
-  for (j in 1:nrow(df)) {
-    # Skip self-comparison
-    if (i != j) {
-      polarity_matrix[i, j] <- p2$all$polarity[i] - p2$all$polarity[j]
-    }
-  }
-}
-
-# Convert the matrix to a data frame for easier analysis
-polarity_df <- as.data.frame(polarity_matrix)
-colnames(polarity_df) <- paste("Doc", 1:nrow(df), sep = "")
-
-# Display the polarity matrix
-print("Polarity Matrix:")
-print(polarity_df)
-
-```
-
-
-
-
-```{r}
-# Assuming you have already calculated polarity scores using the polarity function
-# ...
 
 # Extract relevant information for plotting
 doc_numbers <- df$Number
