in process of transfering/updating code

--- a/R-Project8.Rmd
+++ b/R-Project8.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Q2-R-Project-Group-8, TFIDF"
+title: "Q2-R-Project-Group-8"
 author: "Henry Fong, Ian Zhang, Adam Walters"
 date: "`r Sys.Date()`"
 output: html_document
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r, warning  = FALSE}
+```{r, warning = FALSE, include = FALSE}
 library(rio)
 library(readxl)
 library(openxlsx)
@@ -22,16 +22,20 @@ library(MASS)
 library(qdap)
 ```
 
+## Introduction
+
+We are analyzing text from chatgpt by giving it the prompt "Write a 300 word essay on the future of A.I." five times. There are some alterations on the prompt to help generate a difference in the essay, for example: "Write... on the future of A.I. in the perspective of a pessimist". We choose this text to see if chatgpt will have a negative or positive connotation with the future of A.I. 
+\n
+Methods we will use are TF-IDF to help find the most common words used and plot graph and sentiment analysis to help determine if the tone of the text is positive or negative.
+
+## Data
+
+We are analyzing the data and see if words that are in the five essays all have a overall negative or positive tone.
+\n
+Importing of data and cleaning/formatting
 ```{r}
 df <- read_csv("ChatGPT_ResponsesOnAI.csv")
-
-```
-
-# TF-IDF !!!
-
-```{r}
-corpG <- Corpus(VectorSource(df$Response))
-
+head(df)
 ```
 
 ```{r}
@@ -43,21 +47,24 @@ remove_unknown_characters <- function(text) {
 }
 
 # Apply the function to each document in the corpus
-corpG <- tm_map(corpG, content_transformer(remove_unknown_characters))
-```
+# Function to remove unknown characters
+remove_unknown_characters <- function(text) {
+  encoding <- "UTF-8"
+  clean_text <- iconv(text, to = encoding, sub = "")
+  return(clean_text)
+}
 
-```{r, warning = FALSE}
-corpG <- tm_map(corpG,content_transformer(tolower))
-corpG <- tm_map(corpG,removeNumbers)
-corpG <- tm_map(corpG,removeWords,stopwords("english"))
-corpG <- tm_map(corpG,removePunctuation)
-corpG <- tm_map(corpG, stripWhitespace)
-```
+# Apply the function to each element in the df$Response column
+df$Response <- sapply(df$Response, remove_unknown_characters)
 
-```{r, warning = FALSE}
-corpG <- tm_map(corpG,removeWords, c("Ai", "AI", "ai"))
-corpG <- tm_map(corpG,stemDocument)
-
+# Further text preprocessing on df$Response
+df$Response <- tolower(df$Response)
+df$Response <- gsub("[0-9]", "", df$Response)  # remove numbers
+df$Response <- removeWords(df$Response, stopwords("english"))
+df$Response <- removePunctuation(df$Response)
+df$Response <- stripWhitespace(df$Response)
+df$Response <- removeWords(df$Response, c("ai"))
+df$Response <- stemDocument(df$Response)
 ```
 
 ```{r}
